[tool.poetry]
name = "urlsh"
version = "0.1.0"
description = "A simple url shortener."
authors = ["Arthur Albarelli <arthuralbarelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.9.0"
click = "8.1.8"
flask = "3.1.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
markupsafe = "3.0.2"
werkzeug = "3.1.3"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
